fixed flickering on firefox!

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -7,6 +7,7 @@
     bottom: 0;
     display: block;
     font-size: 0px;
+    padding: 0;
 
 }
 
@@ -25,9 +26,10 @@
     position: absolute;
     top: 0;
     width: 100%;
+    padding: 0;
 }
 
 #pixi-container {
     position: fixed;
-    z-index: 0;
+    z-index:0
 }
